--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </label>
 
                 <!-- Input Type Text-->
-                <input type="text"
+                <input type="text" required
                        id="name"
                        placeholder="Enter your name" />
             </div>
@@ -41,7 +41,7 @@
                 </label>
 
                 <!-- Input Type Text-->
-                <input type="text"
+                <input type="number"
                        id="age"
                        placeholder="Enter your age" />
             </div>
@@ -52,8 +52,8 @@
                 </label>
 
                 <!-- Dropdown options-->
-                <select name="role" id="role">
-                    <option value="choose">Choose from below</option>
+                <select name="role" id="role" required>
+                    <option value="choose" selected disabled>Choose from below</option>
                     <option value="student">Student</option>
                     <option value="intern">Intern</option>
                     <option value="professional">Professional</option>
@@ -141,7 +141,7 @@
             </div>
 
             <!-- Multi-line Text Input Control-->
-            <button type="submit" value="submit">
+            <button class="button-74" type="submit" value="submit">
                 Submit
             </button>
     </form>
